frontend/src/containers/Footer/Footer.scss
@mixin flex-column-center {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

@mixin flex-column-center-noJustify {
  display: flex;
  flex-direction: column;
  align-items: center;
}

@mixin flex-row-center {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.footer {
  @include flex-column-center;
  width: 100%;
  background-color: var(--bg-black-color);
  color: var(--white-color-text-primary);
  padding: 4rem 0 2rem 0;
  margin-top: 28rem;
  position: relative;

  &.contact-footer {
    margin-top: 0;
  }

  @media screen and (max-width: 768px) {
    padding: 4rem 0 1rem 0;
  }

  @media screen and (max-width: 500px) {
    margin-top: 24rem;
  }

  @media screen and (max-width: 400px) {
    margin-top: 28rem;
  }

  &-section {
    @include flex-row-center;
    align-items: stretch;
    width: 80%;
    padding: 0 4rem;

    @media screen and (max-width: 1600px) {
      width: 90%;
      padding: 4rem;
    }

    @media screen and (max-width: 1100px) {
      width: 100%;
    }

    @media screen and (max-width: 800px) {
      padding-top: 10rem;
    }

    @media screen and (max-width: 768px) {
      flex-direction: column;
      padding: 1rem 0;
      //   padding-top: 10rem;
      width: 90%;
      margin-top: 0;
    }

    &-social,
    &-links {
      @include flex-column-center;
      gap: 1rem;
      width: 50%;

      @media screen and (max-width: 768px) {
        width: 100%;
      }
    }

    &-vertical-separator {
      width: 1px;
      margin: 0 1rem;
      background-color: var(--white-color-text-primary);

      @media screen and (max-width: 768px) {
        height: 1px;
        width: 100%;
        margin: 1.5rem 0;
      }
    }

    &-social {
      @include flex-column-center;
      align-items: flex-start;
      justify-content: flex-start;
      gap: 1rem;

      @media screen and (max-width: 768px) {
        align-items: center;
        margin: 0;
        gap: 1.5rem;
      }

      h2.logo {
        font-family: "Dancing Script", serif;
        font-size: 2rem;
        color: var(--primary-color-text-contrast-2);
      }

      .subtext {
        font-size: 1rem;
        font-weight: 400;
        line-height: 120%;
        width: 350px;

        @media screen and (max-width: 1000px) {
          width: 250px;
        }

        @media screen and (max-width: 768px) {
          width: 100%;
          text-align: center;
        }
      }

      .social-links {
        @include flex-row-center;
        gap: 1rem;

        a {
          padding: 0.4rem;
          border-radius: 50%;
          transition: all 0.3s ease-in-out;
          border: 1px solid var(--white-color-text-primary);

          svg {
            cursor: pointer;
            transition: all 0.3s ease-in-out;
            height: 1rem;
            width: 1rem;
          }

          &:hover {
            background-color: var(--primary-color-text-contrast-2);
            border-color: var(--primary-color-text-contrast-2);

            svg {
              transform: scale(1.2);
              color: var(--bg-black-color);
            }
          }
        }
      }
    }

    &-links {
      @include flex-row-center;
      align-items: flex-start;
      gap: 5rem;

      @media screen and (max-width: 768px) {
        align-items: center;
        flex-direction: column;
        gap: 0;
      }

      .links-container {
        @include flex-column-center;
        gap: 0.3rem;
        font-size: 1rem;
        font-weight: 400;

        span {
          font-size: 1rem;
          font-weight: 600;
          color: var(--primary-color-text-contrast-2);
        }

        a {
          text-decoration: none;
          color: var(--white-color-text-primary);
          transition: all 0.3s ease-in-out;

          &:hover {
            color: var(--primary-color-text-contrast-2);
          }
        }
      }

      .footer-section-vertical-separator-mobile {
        display: none;

        @media screen and (max-width: 768px) {
          display: block;
          width: 100%;
          height: 1px;
          margin: 1.5rem 0;
          background-color: var(--white-color-text-primary);
        }
      }

      .additional-link {
        @include flex-column-center;
        align-items: flex-start;
        gap: 0.6rem;
        font-size: 1rem;
        font-weight: 600;
        color: var(--primary-color-text-contrast-2);

        img {
          cursor: pointer;
          height: 30px;
          width: auto;
        }

        @media screen and (max-width: 768px) {
          align-items: center;
        }
      }
    }
  }

  &-copyright,
  &-credits {
    @include flex-row-center;
    font-size: 0.8rem;
    font-weight: 400;
    margin-top: 3rem;
    color: var(--gray-color-text-dark);
  }

  &-credits {
    margin-top: 0.2rem;
    transition: color 0.3s ease-in-out;

    &:hover {
      a {
        color: var(--primary-color-text-contrast-2);
      }
    }
  }

  &-subscribe {
    position: absolute;
    bottom: 80%;
    @include flex-row-center;
    background-color: var(--primary-color-text-contrast-2);
    color: var(--black-color-text-primary);
    border-radius: 20px;
    gap: 1rem;
    width: 100%;
    margin: 4rem 0 2rem 0;

    width: 80%;
    padding: 1rem;

    @media screen and (max-width: 1600px) {
      width: calc(90% - 8rem);
    }

    @media screen and (max-width: 1100px) {
      width: calc(100% - 8rem);
    }

    @media screen and (max-width: 990px) {
      flex-direction: column;
      width: calc(100% - 4rem);
    }

    @media screen and (max-width: 768px) {
      bottom: 88%;
    }

    @media screen and (max-width: 500px) {
      flex-direction: column;
      width: calc(100% - 2rem);
    }

    &-input-section {
      width: calc(100% - 380px);
      align-self: stretch;
      padding: 3rem 0 0 3rem;
      @include flex-column-center;
      gap: 4rem;
      justify-content: flex-start;

      @media screen and (max-width: 1400px) {
        padding: 3rem 0 0 2rem;
      }

      @media screen and (max-width: 1100px) {
        width: calc(100% - 300px);
      }

      @media screen and (max-width: 990px) {
        width: 100%;
        padding: 2rem;
        gap: 2rem;
      }

      @media screen and (max-width: 600px) {
        padding: 1rem;
      }

      h2 {
        font-size: 3.6rem;
        font-weight: 700;
        line-height: 120%;

        @media screen and (max-width: 768px) {
          font-size: 3rem;
        }

        @media screen and (max-width: 500px) {
          font-size: 2.5rem;
        }
      }

      .action-section {
        @include flex-row-center;
        gap: 1rem;
        width: 100%;

        .footerInput {
          @include flex-row-center;
          gap: 1rem;
          width: 100%;

          input {
            width: 100%;
            padding: 16px;
            border-radius: 10px;
            min-width: 200px;
            border: none;
            outline: none;
            background-color: var(--white-color-text-primary);
          }

          button {
            width: 204px;
          }

          @media screen and (max-width: 1000px) {
            flex-direction: column;
            align-items: flex-start;
          }

          @media screen and (max-width: 500px) {
            input,
            button {
              padding-top: 12px;
              padding-bottom: 12px;
            }
          }
        }
      }
    }

    &-img-section {
      // min-width: 380px;
      align-self: stretch;
      @include flex-row-center;
      align-items: flex-end;

      @media screen and (max-width: 990px) {
        display: none;
      }

      img {
        min-height: 380px;
        min-width: 380px;
        width: 380px;
        height: 380px;

        @media screen and (max-width: 1100px) {
          min-width: auto;
          min-height: auto;
          width: 300px;
          height: 300px;
        }
      }
    }
  }
}

